# braandket-synthesis

./: pyproject.toml
.github/workflows/: release.yml
docs/: Changelogs.md
src/braandket_synthesis/: __init__.py
src/braandket_synthesis/basics/: __init__.py  operation_and_trait.py
src/braandket_synthesis/operation/: __init__.py  matrix.py  structural.py  traits.py  utils.py
src/braandket_synthesis/operations/: __init__.py  gates.py  matrix.py  structural.py
src/braandket_synthesis/operations/gates/: __init__.py  gates.py
src/braandket_synthesis/operations/measurement/: desired.py  projective.py  utils.py
src/braandket_synthesis/operations/numeric/: matrix.py
src/braandket_synthesis/operations/structural/: __init__.py  controlled.py  remapped.py  sequential.py
src/braandket_synthesis/traits/: __init__.py  apply.py  measure.py  tensor.py
src/braandket_synthesis/utils/: __init__.py  iter_structured.py
src/qsythesis/operation/: __init__.py  matrix.py  operation.py  structural.py  traits.py
