[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "braandket-synthesis"
version = "0.3.0.dev0"

description = "A library for quantum circuit synthesis based on BraAndKet."
readme = "README.md"

authors = []

[tool.poetry.dependencies]
python = "^3.10"
braandket-circuit = { git = "https://github.com/ZhengKeli/braandket-circuit", tag = "v0.2.0a1" }
